making divs/ ajusting img

--- a/index.html
+++ b/index.html
@@ -27,12 +27,22 @@
 
     <img src="assets/istockphoto-1306141632-170667a.jpg" alt = "Mulher correndo"
     />
-    <h3>Benefícios da calistenia</h3>
-    <p>Os exercicios podem aumentar a flexibilidade e a mobilidade articular, Melhorar equilíbrio corporal, Desenvolver coordenação motora e muito mais</p>
-    <h3>exercícios de Calistenia são muito difíceis?</h3>
-    <p>Os exercício calistênicos contam com diferentes níveis de dificuldade que podem se adequar a quem esta praticando</p>
-    <h3>O QUE DIZ A CIÊNCIA</h3>
-    <p>cientistas da unidade de pesquisa de Ciências do Esporte e Exercício da Universidade de Palermo, Itália, fizeram uma pesquisa que apontou que o treinamento de calistenia melhora a postura, força e composição corporal.</p>
+        <div>
+            
+            <div>
+                <h3>Benefícios da calistenia</h3>
+                <p>Os exercicios podem aumentar a flexibilidade e a mobilidade articular, Melhorar equilíbrio corporal, Desenvolver coordenação motora e muito mais</p>
+            </div>    
+            <div>
+                <h3>exercícios de Calistenia são muito difíceis?</h3>
+                <p>Os exercício calistênicos contam com diferentes níveis de dificuldade que podem se adequar a quem esta praticando</p>
+            </div>
+            <div>
+                <h3>O QUE DIZ A CIÊNCIA</h3>
+                <p>cientistas da unidade de pesquisa de Ciências do Esporte e Exercício da Universidade de Palermo, Itália, fizeram uma pesquisa que apontou que o treinamento de calistenia melhora a postura, força e composição corporal.</p>
+            </div>
+        
+        </div>
     </header>
 
 </body>
