--- a/sobre.html
+++ b/sobre.html
@@ -35,7 +35,7 @@
             </div>    
         
     </nav>
-    <header class="sobre"> 
+    <header class="sobre" id="sobreId"> 
       <div class="iniial-text" id="iniial-text">
         <h2>O que é Calestenia</h2>
         <img src="https://images.unsplash.com/photo-1599744331097-8e64155b1383?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=776&q=80" alt="homem fazendo calestenia">
