border-radius + margin

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <header> 
       <div class="iniial-text" id="iniial-text">
         <h1>Calistenia simples para todos</h1>
-        <p>Exercícios calistênicos podem ser bastante inclusivos, permitindo que qualquer pessoa — independente de peso, condição física e idade</p>
+        <p>Exercícios calistênicos podem ser bastante inclusivos, permitindo que qualquer pessoa — independente de peso, condição física e idade.</p>
         <h2>O que é Calestenia</h2>
-        <p>Calistenia é um conjunto de exercícios físicos nos quais se usa apenas o peso do próprio corpo. Procura movimentar grupos musculares de maneira natural, sem utilização de halteres e similares.</p>
+        <p>Calistenia é um conjunto de exercícios físicos nos quais se usa apenas o peso do próprio corpo. A calestenia movimenta grupos musculares de maneira natural, sem utilização de halteres e similares.</p>
       </div>
         <h4>BEM VINDO AO NLWfIT</h4>
    
@@ -63,7 +63,7 @@
             </div>
             <div class="info">
                 <h3>O QUE DIZ A CIÊNCIA</h3>
-                <p>cientistas da unidade de pesquisa de Ciências do Esporte e Exercício da Universidade de Palermo, Itália, fizeram uma pesquisa que apontou que o treinamento de calistenia melhora a postura, força e composição corporal.</p>
+                <p>Cientistas da unidade de pesquisa de Ciências do Esporte e Exercício da Universidade de Palermo, Itália, fizeram uma pesquisa que apontou que o treinamento de calistenia melhora a postura, força e composição corporal.</p>
             </div>
         
         </div>
