correcting text in pages

--- a/exercicio.html
+++ b/exercicio.html
@@ -44,7 +44,7 @@
     </div>
        
     <div class="agachamento">
-        <h1>5 exercícios</h1><p>Há vários exercicios calesténicos que podem ser executadas ao livre ou em casa</p>
+        <h1>5 exercícios</h1><p>Há vários exercicios calesténicos que podem ser executadas ao livre ou em casa.</p>
     <h1>Agachamentos</h1>
     <p>
         O agachamento é um tipo clássico de exercício que trabalha praticamente todos os músculos das pernas e glúteos. Para fazer isso corretamente, coloque os pés na largura dos ombros e agache-se com os quadris para trás e as costas retas até que os joelhos estejam a 90º.
@@ -54,7 +54,7 @@
     </div>
     <div class="triceps">
     <h1>tríceps banco</h1>
-    <p>Primeiro, coloque as mãos na cadeira, depois dobre as pernas levemente à frente do corpo, com os pés juntos e apontando para cima. Em seguida, abaixe o corpo até que os cotovelos formem um ângulo de 90 graus e levante-se novamente. Idealmente, suas mãos devem estar a uma distância de seus quadris.</p>
+    <p>Primeiro, coloque as mãos na cadeira, depois dobre as pernas levemente à frente do corpo, com os pés juntos e apontando para cima. Em seguida, abaixe o corpo até que os cotovelos formem um ângulo de 90 graus e levante-se novamente.</p>
     <img src="http://conteudo.imguol.com.br/c/entretenimento/3d/2019/07/30/triceps-banco-1564513589405_v2_1254x836.jpg" alt="mulher fazendo exercicio no banco">
     <a href="https://www.youtube.com/watch?v=4GbCPCHOPww" target="_blank">video triceps banco</a>
     </div>
